...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Settings-->
        <scene sceneID="7al-Pn-k8w">
            <objects>
                <tableViewController title="Settings" id="nLN-9e-cB1" customClass="SettingsViewController" customModule="BoardBank" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" id="G8o-dK-bNQ">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                        <sections>
                            <tableViewSection headerTitle="Settings" id="nwX-tw-oa9">
...
            </objects>
            <point key="canvasLocation" x="2149.5999999999999" y="46.326836581709152"/>
        </scene>
        <!--Add Player-->
        <scene sceneID="MFX-VX-aMh">
            <objects>
                <tableViewController title="Add Player" id="Jie-87-h7R" customClass="AddPlayerViewController" customModule="BoardBank" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" id="b2V-wC-5yG">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                        <sections>
                            <tableViewSection id="eqv-E2-DWh">
...
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="80" id="93u-fg-3FN"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="nameTextField" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Player" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7LF-WD-uAX">
                                                    <rect key="frame" x="106" y="0.0" width="269" height="43.5"/>
                                                    <nil key="textColor"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="no" returnKeyType="next"/>
                                                    <connections>
                                                        <outlet property="delegate" destination="Jie-87-h7R" id="dsu-U0-Oec"/>
...
